Compi_miniC/calc.output
Gramática

    0 $accept: entrada $end

    1 entrada: ε

    2 $@1: ε

    3 entrada: entrada $@1 linea

    4 linea: expresion FIN
    5      | ID ASIG expresion FIN
    6      | error FIN

    7 expresion: expresion MAS expresion
    8          | expresion MENOS expresion
    9          | expresion POR expresion
   10          | expresion DIV expresion
   11          | expresion MOD expresion
   12          | PARI expresion PARD
   13          | MENOS expresion
   14          | NUM


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 6
    PARI (258) 12
    PARD (259) 12
    FIN (260) 4 5 6
    ASIG (261) 5
    MAS (262) 7
    MENOS (263) 8 13
    POR (264) 9
    DIV (265) 10
    MOD (266) 11
    NUM <entero> (267) 14
    ID <cadena> (268) 5
    UMENOS (269)


No terminales con las reglas donde aparecen

    $accept (15)
        on left: 0
    entrada <entero> (16)
        on left: 1 3
        on right: 0 3
    $@1 (17)
        on left: 2
        on right: 3
    linea (18)
        on left: 4 5 6
        on right: 3
    expresion <entero> (19)
        on left: 7 8 9 10 11 12 13 14
        on right: 4 5 7 8 9 10 11 12 13


Estado 0

    0 $accept: • entrada $end

    $default  reduce usando la regla 1 (entrada)

    entrada  ir al estado 1


Estado 1

    0 $accept: entrada • $end
    3 entrada: entrada • $@1 linea

    $end  desplazar e ir al estado 2

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 3


Estado 2

    0 $accept: entrada $end •

    $default  aceptar


Estado 3

    3 entrada: entrada $@1 • linea

    error  desplazar e ir al estado 4
    PARI   desplazar e ir al estado 5
    MENOS  desplazar e ir al estado 6
    NUM    desplazar e ir al estado 7
    ID     desplazar e ir al estado 8

    linea      ir al estado 9
    expresion  ir al estado 10


Estado 4

    6 linea: error • FIN

    FIN  desplazar e ir al estado 11


Estado 5

   12 expresion: PARI • expresion PARD

    PARI   desplazar e ir al estado 5
    MENOS  desplazar e ir al estado 6
    NUM    desplazar e ir al estado 7

    expresion  ir al estado 12


Estado 6

   13 expresion: MENOS • expresion

    PARI   desplazar e ir al estado 5
    MENOS  desplazar e ir al estado 6
    NUM    desplazar e ir al estado 7

    expresion  ir al estado 13


Estado 7

   14 expresion: NUM •

    $default  reduce usando la regla 14 (expresion)


Estado 8

    5 linea: ID • ASIG expresion FIN

    ASIG  desplazar e ir al estado 14


Estado 9

    3 entrada: entrada $@1 linea •

    $default  reduce usando la regla 3 (entrada)


Estado 10

    4 linea: expresion • FIN
    7 expresion: expresion • MAS expresion
    8          | expresion • MENOS expresion
    9          | expresion • POR expresion
   10          | expresion • DIV expresion
   11          | expresion • MOD expresion

    FIN    desplazar e ir al estado 15
    MAS    desplazar e ir al estado 16
    MENOS  desplazar e ir al estado 17
    POR    desplazar e ir al estado 18
    DIV    desplazar e ir al estado 19
    MOD    desplazar e ir al estado 20


Estado 11

    6 linea: error FIN •

    $default  reduce usando la regla 6 (linea)


Estado 12

    7 expresion: expresion • MAS expresion
    8          | expresion • MENOS expresion
    9          | expresion • POR expresion
   10          | expresion • DIV expresion
   11          | expresion • MOD expresion
   12          | PARI expresion • PARD

    PARD   desplazar e ir al estado 21
    MAS    desplazar e ir al estado 16
    MENOS  desplazar e ir al estado 17
    POR    desplazar e ir al estado 18
    DIV    desplazar e ir al estado 19
    MOD    desplazar e ir al estado 20


Estado 13

    7 expresion: expresion • MAS expresion
    8          | expresion • MENOS expresion
    9          | expresion • POR expresion
   10          | expresion • DIV expresion
   11          | expresion • MOD expresion
   13          | MENOS expresion •

    $default  reduce usando la regla 13 (expresion)


Estado 14

    5 linea: ID ASIG • expresion FIN

    PARI   desplazar e ir al estado 5
    MENOS  desplazar e ir al estado 6
    NUM    desplazar e ir al estado 7

    expresion  ir al estado 22


Estado 15

    4 linea: expresion FIN •

    $default  reduce usando la regla 4 (linea)


Estado 16

    7 expresion: expresion MAS • expresion

    PARI   desplazar e ir al estado 5
    MENOS  desplazar e ir al estado 6
    NUM    desplazar e ir al estado 7

    expresion  ir al estado 23


Estado 17

    8 expresion: expresion MENOS • expresion

    PARI   desplazar e ir al estado 5
    MENOS  desplazar e ir al estado 6
    NUM    desplazar e ir al estado 7

    expresion  ir al estado 24


Estado 18

    9 expresion: expresion POR • expresion

    PARI   desplazar e ir al estado 5
    MENOS  desplazar e ir al estado 6
    NUM    desplazar e ir al estado 7

    expresion  ir al estado 25


Estado 19

   10 expresion: expresion DIV • expresion

    PARI   desplazar e ir al estado 5
    MENOS  desplazar e ir al estado 6
    NUM    desplazar e ir al estado 7

    expresion  ir al estado 26


Estado 20

   11 expresion: expresion MOD • expresion

    PARI   desplazar e ir al estado 5
    MENOS  desplazar e ir al estado 6
    NUM    desplazar e ir al estado 7

    expresion  ir al estado 27


Estado 21

   12 expresion: PARI expresion PARD •

    $default  reduce usando la regla 12 (expresion)


Estado 22

    5 linea: ID ASIG expresion • FIN
    7 expresion: expresion • MAS expresion
    8          | expresion • MENOS expresion
    9          | expresion • POR expresion
   10          | expresion • DIV expresion
   11          | expresion • MOD expresion

    FIN    desplazar e ir al estado 28
    MAS    desplazar e ir al estado 16
    MENOS  desplazar e ir al estado 17
    POR    desplazar e ir al estado 18
    DIV    desplazar e ir al estado 19
    MOD    desplazar e ir al estado 20


Estado 23

    7 expresion: expresion • MAS expresion
    7          | expresion MAS expresion •
    8          | expresion • MENOS expresion
    9          | expresion • POR expresion
   10          | expresion • DIV expresion
   11          | expresion • MOD expresion

    POR  desplazar e ir al estado 18
    DIV  desplazar e ir al estado 19
    MOD  desplazar e ir al estado 20

    $default  reduce usando la regla 7 (expresion)


Estado 24

    7 expresion: expresion • MAS expresion
    8          | expresion • MENOS expresion
    8          | expresion MENOS expresion •
    9          | expresion • POR expresion
   10          | expresion • DIV expresion
   11          | expresion • MOD expresion

    POR  desplazar e ir al estado 18
    DIV  desplazar e ir al estado 19
    MOD  desplazar e ir al estado 20

    $default  reduce usando la regla 8 (expresion)


Estado 25

    7 expresion: expresion • MAS expresion
    8          | expresion • MENOS expresion
    9          | expresion • POR expresion
    9          | expresion POR expresion •
   10          | expresion • DIV expresion
   11          | expresion • MOD expresion

    $default  reduce usando la regla 9 (expresion)


Estado 26

    7 expresion: expresion • MAS expresion
    8          | expresion • MENOS expresion
    9          | expresion • POR expresion
   10          | expresion • DIV expresion
   10          | expresion DIV expresion •
   11          | expresion • MOD expresion

    $default  reduce usando la regla 10 (expresion)


Estado 27

    7 expresion: expresion • MAS expresion
    8          | expresion • MENOS expresion
    9          | expresion • POR expresion
   10          | expresion • DIV expresion
   11          | expresion • MOD expresion
   11          | expresion MOD expresion •

    $default  reduce usando la regla 11 (expresion)


Estado 28

    5 linea: ID ASIG expresion FIN •

    $default  reduce usando la regla 5 (linea)
